Fix expanded buttons going out of bounds

--- a/docs/custom-rtl.css
+++ b/docs/custom-rtl.css
@@ -65,8 +65,7 @@ a {
 }
 
 .custom-down-cdn {
-  width: 100%;
-  max-width: 250px;
+  width: 250px;
 }
 
 .custom-down-cdn span {
